# global

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
Docs/other/: creating_rust_library.md  git_bases.md  git_setup.md  tauri_react_tailwind_app_setup.md
crates/maincore/: Cargo.toml
crates/maincore/src/: lib.rs
crates/maincore/src/mainblock/: mainblock.rs  mod.rs
crates/maincore/src/maincore_inner/: maincore_inner.rs  mod.rs
crates/maincore/src/mainheader/: mainheader.rs  mod.rs
crates/maintx/: Cargo.toml
crates/maintx/src/: lib.rs  maintx.rs  maintxin.rs  maintxout.rs
crates/maintx/src/maintx/: maintx.rs  mod.rs
crates/maintx/src/maintx_in/: maintx_in.rs  mod.rs
crates/maintx/src/maintx_out/: maintx_out.rs  mod.rs
crates/utility/: Cargo.toml
crates/utility/src/: bigint.rs  hashing.rs  lib.rs  utility.rs
crates/utility/src/buffer/: buffer_reader.rs  buffer_writer.rs  mod.rs
crates/utility/src/common/: buffer_reader.rs  buffer_writer.rs  mod.rs  time.rs
crates/utility/src/crypto/: bigint.rs  buffer_reader.rs  buffer_writer.rs  ecdsa.rs  hash.rs  mod.rs  tree.rs
crates/utility/src/ecdsa/: ecdsa.rs  key_derivation_v1.rs  mod.rs
crates/utility/src/hash/: mod.rs  tree.rs
crates/utility/src/storage/: async_file.rs  mod.rs  storage_directory.rs
crates/utility/src/system/: random.rs  time.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: lib.rs
crates/wallet/src/wallet_v1/: mod.rs  resource.rs  resource_info.rs  seed_generation.rs  seed_wordlist.rs  wallet.rs  wallet_inner.rs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/app_data/: app_paths.rs  mod.rs
src/pages/chats/: Chats.tsx
src/pages/home/: Home.css  Home.tsx
src/pages/settings/: Settings.tsx
