[package]
name = "utility"
version = "0.1.0"
edition = "2021"

[dependencies]
#regex = "1.9"

thiserror = "1.0"
chrono = "0.4.31"
num-bigint = "0.4.4"
num-traits = "0.2.17"
rand = "0.8.5"
rand_chacha = "0.3.0"
####sled = "0.34.7"
secp256k1 = "0.28.0"
#secp256k1 = { version = "0.28", features = ["global-context"] }
sha3 = "0.10.8"
hmac = "0.12"
pbkdf2 = "0.12"
tokio = { version = "1.0", features = ["full"] }


