[package]
name = "utility"
version = "0.1.0"
edition = "2021"

[dependencies]
#regex = "1.9"

thiserror = "1.0"
chrono = "0.4.31"
num-bigint = "0.4.4"
num-traits = "0.2.17"
rand = "0.8.5"
rand_chacha = "0.3.0"



####sled = "0.34.7"

tokio = { version = "1.0", features = ["full"] }

# hash
sha3 = "0.10"

# ecdsa related
sha2 = "0.10"
hmac = "0.12"
#hex = "0.4"
pbkdf2 = "0.12"
zeroize = "1.6"
#zeroize = { version = "1.6", features = ["derive"] }
secp256k1 = "0.28.0"
#secp256k1 = { version = "0.28", features = ["global-context"] }
#secp256k1 = { version = "0.28", features = ["rand", "global-context"] }




