[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
#tokio = { version = "1.0", features = ["full"] }
utility = { path = "../utility" }

hmac = "0.12"
#secp256k1 = "0.27"
#hex = "0.4"
pbkdf2 = "0.12"
zeroize = "1.6"
#zeroize = { version = "1.6", features = ["derive"] }
sha2 = "0.10"
